# remedy-canvas-desktop

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml  ci.yml
public/: theme-init.js
scripts/: fetch-runtimes.ps1  fetch-runtimes.sh  run_validation.py  run_validation_heavy.py  run_validation_packaged.py  sign-and-notarize.sh  verify-runtimes.sh
sidecar/: build_binary.py  pyproject.toml
sidecar/crd_sidecar/: __init__.py  main.py  telemetry.py
sidecar/crd_sidecar/crd_core/: __init__.py  config.py  models.py
sidecar/crd_sidecar/crd_core/accessibility/: __init__.py  analyzer.py  axe_mapper.py  image_alt.py  link_scanner.py  remediation_guides.py  structure_analyzer.py  vpat.py  vpat_criteria.json
sidecar/crd_sidecar/crd_core/accessibility/rules/: __init__.py  base.py  buttons.py  consistent_help.py  contrast.py  documents.py  events.py  focus.py  forms.py  headings.py  images.py  links.py  lists.py  math.py  media.py  structure.py  tables.py  target_size.py
sidecar/crd_sidecar/crd_core/ai/: ai_scheduler.py  alt_text.py  prompt_library.py  vision_client.py
sidecar/crd_sidecar/crd_core/documents/: __init__.py  alt_formats.py  liteparse_adapter.py  llm_converter.py
sidecar/crd_sidecar/crd_core/remediation/: canvas_allowlist.py  canvas_validator.py  math_sel.py  transformer.py
sidecar/crd_sidecar/crd_core/services/: acr_export_service.py  acr_service.py  scoring_service.py
sidecar/crd_sidecar/crd_core/suggestions/: __init__.py  alt_text.py  contrast.py  form_label.py  link_text.py  models.py  table_caption.py
sidecar/crd_sidecar/imscc/: __init__.py  builder.py  document_converter.py  image_fetcher.py  link_discovery.py  models.py  parser.py  safe_archive.py
sidecar/crd_sidecar/ipc/: __init__.py  handlers.py  rpc.py
sidecar/crd_sidecar/orchestrator/: __init__.py  pipeline.py
sidecar/crd_sidecar/render/: __init__.py  axe_runner.py  mock_shell.py
sidecar/crd_sidecar/templates/: acr_report.html
sidecar/tests/: test_imscc_smoke.py  test_provider_config.py  test_rpc_smoke.py
src/: App.css  App.tsx  sourceFile.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs  ollama.rs  sysmem.rs
src/components/: AIBackendSettings.tsx  DropZone.tsx  OllamaBadge.tsx  OptionsPanel.tsx  ProgressView.tsx  ResultsPanel.tsx  SuggestionReview.tsx  ThemeToggle.tsx
src/types/: provider.ts
