[project]
name = "remedy-canvas-desktop-sidecar"
version = "0.1.0"
description = "Python sidecar for Remedy Canvas Desktop — IMSCC accessibility remediation engine"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
    "pydantic>=2.6",
    "python-ulid>=2.2",
    "structlog>=24.1",
    "openai>=1.30",
    "lxml>=5.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "pyinstaller>=6",
]
# Opt-in crash reporting — only imported if CRD_SENTRY_DSN env var is set
telemetry = ["sentry-sdk>=2.0"]
# Phase 3: mock-Canvas rendered scanner (heavy — browser binaries)
render = ["playwright>=1.43"]
# Phase 5.5: document-to-HTML conversion
# liteparse Python package is a wrapper around the @llamaindex/liteparse Node CLI.
# Node + LiteParse CLI must be installed separately (bundled via vercel/pkg for the installer).
documents = ["liteparse>=1.2.0"]

[project.scripts]
crd-sidecar = "crd_sidecar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crd_sidecar"]
# Explicit include so non-.py data files (Jinja2 templates, JSON criteria
# data) end up in the wheel. Hatch's default pattern is .py-only.
[tool.hatch.build.targets.wheel.force-include]
"crd_sidecar/templates/acr_report.html" = "crd_sidecar/templates/acr_report.html"
"crd_sidecar/crd_core/accessibility/vpat_criteria.json" = "crd_sidecar/crd_core/accessibility/vpat_criteria.json"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real sample files (e.g. IMSCC from ~/Desktop/sample_export_courses/)",
]
